Fixed some alignment issues

--- a/src/style.css
+++ b/src/style.css
@@ -87,7 +87,7 @@ body {
     color: #fafafa;
     background-color: #301934;
     border: none;
-    padding: 10px 20px;
+    padding: 10px 15px;
     font-size: 16px;
     border-radius: 5px;
     margin: 0px 10px;
@@ -138,7 +138,7 @@ body {
 
   /* Spinner */
 
-  .spinner-container {
+  div .spinner-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -148,7 +148,6 @@ body {
   .spinner {
     position: absolute;
     top: 50%;
-    left: 50%;
     border: 8px solid rgba(0, 0, 0, 0.1);
     border-left-color: #c91574;
     border-radius: 50%;
